# ldtklib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
ldtklib/: __init__.py
ldtklib/classes/: entity.py  file.py  layer.py  level.py  tile.py  world.py
