[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "ldtklib"
description = 'A package that can handle LDtk .ldtk files'
version = "1.0.1"

authors = [
  { name = "dalmatheo", email = "134540422+dalmatheo@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ldtk", "LDTK", "LDtk"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Operating System :: OS Independent"
]

[project.urls]
Source = "https://github.com/Crocodile-Coding-Club/ldtklib"
Issues = "https://github.com/Crocodile-Coding-Club/ldtklib/issues"